fixed bug in which lazy-loading images would be distorted

--- a/src/react/components/Composite/Composite.css
+++ b/src/react/components/Composite/Composite.css
@@ -23,8 +23,6 @@
 				display: block;
 				width: 100%;
 				height: auto;
-				scroll-snap-align: start;
-				pointer-events: none;
 				transition: opacity .3s;
 			}
 		
